new changes in admin

--- a/src/app/product-management/add-sub-category/add-sub-category.component.html
+++ b/src/app/product-management/add-sub-category/add-sub-category.component.html
@@ -1,5 +1,5 @@
 <div class="body-container">
-   <app-header></app-header>
+   <!-- <app-header></app-header> -->
     <!-- /.navbar -->
     <div class="main-container">
        <app-sidebar></app-sidebar>
@@ -14,39 +14,41 @@
                    </ol>
                 </div>
              </div>
-             <div class="row">
+             <div class="row mt-2">
                 <div class="col-md-12">
                    <div class="panel panel-default">
                       <div class="panel-body">
-                         <div class="row">
-                            <div class="col-sm-4">
-                               <div class="form-group">
-                                  <label for="category">Category Name</label>
-                                  <input type="text" placeholder="Category Name" id="category" class="form-control" value="Chrome Ore ">
-                               </div>
-                            </div>
-                            <div class="col-sm-4">
-                               <div class="form-group">
-                                  <label for="category">Sub Category</label>
-                                  <input type="text" placeholder="Category Name" id="category" class="form-control" value="High Grade Chrome Ore">
-                               </div>
-                            </div>
-                            <div class="col-sm-4">
-                               <div class="form-group">
-                                  <label for="search">Status</label>
-                                  <select class="form-control rm06" name="status">
-                                     <option value="A">Active</option>
-                                     <option value="I">Inactive</option>
-                                  </select>
-                               </div>
-                            </div>
-                            <div class="col-sm-12">
-                               <div class="form-group">
-                                  <label for="category">Description</label>
-                                  <textarea class="form-control" rows="4" placeholder="Ranked among the top-seven global chrome alloy producers, we are the leading manufacturers of High Carbon Ferro Chrome in India. We produce various grades of Ferro Chrome"></textarea>
-                               </div>
-                            </div>
-                            <div class="col-sm-12">
+                         <div class="row input-form">
+                           <!-- <div class="mt-2"> -->
+                              <div class="col-sm-4">
+                                 <div class="form-group">
+                                    <label for="category">Category Name</label>
+                                    <input type="text" placeholder="Category Name" id="category" class="form-control">
+                                 </div>
+                              </div>
+                              <div class="col-sm-4">
+                                 <div class="form-group">
+                                    <label for="category">Sub Category</label>
+                                    <input type="text" placeholder="Category Name" id="category" class="form-control">
+                                 </div>
+                              </div>
+                              <div class="col-sm-4">
+                                 <div class="form-group">
+                                    <label for="search">Status</label>
+                                    <select class="form-control rm06" name="status">
+                                       <option value="A">Active</option>
+                                       <option value="I">Inactive</option>
+                                    </select>
+                                 </div>
+                              </div>
+                              <div class="col-sm-12 mt-2">
+                                 <div class="form-group">
+                                    <label for="category">Description</label>
+                                    <textarea class="form-control h-75" rows="5" placeholder="Ranked among the top-seven global chrome alloy producers, we are the leading manufacturers of High Carbon Ferro Chrome in India. We produce various grades of Ferro Chrome"></textarea>
+                                 </div>
+                              <!-- </div> -->
+                           </div>
+                            <div class="col-sm-12 mt-2">
                                <div class="">
                                   <button class="btn btn-primary btn-ser" type="submit">Save</button>
                                </div>
