--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
             <form class="form-horizontal m-t-20" [formGroup]="adminLoginForm" (ngSubmit)="submitLogin()">
                <div class="form-group">
                   <div class="col-xs-12">
-                     <input class="form-control input-lg" formControlName="email" type="text" required=""
+                     <input class="form-control input-lg mb-3" formControlName="email" type="text" required=""
                         placeholder="Username" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
                      <!-- <div *ngIf="f['email'].invalid && (f['email'].dirty || f['email'].touched || submitted)">
                         <small class="text-danger">
@@ -32,7 +32,7 @@
                </div>
                <div class="form-group">
                   <div class="col-xs-12">
-                     <input class="form-control input-lg" formControlName="password" type="password" required=""
+                     <input class="form-control input-lg mb-3" formControlName="password" type="password" required=""
                         placeholder="Password">
                      <div *ngIf="f['password'].invalid && (f['password'].dirty || f['password'].touched || submitted)">
                         <small class="text-danger">
@@ -53,7 +53,7 @@
                </div>
                <div class="form-group text-center m-t-40">
                   <div class="col-xs-12">
-                     <button class="btn btn-primary btn-lg w-lg waves-effect waves-light rm01" type="submit">Log
+                     <button class="btn btn-primary btn-lg w-lg waves-effect waves-light rm01 mb-3 btn-h-auto" type="submit">Log
                         In</button>
                   </div>
                </div>
