--- a/src/app/customer/customer-upload/customer-upload.component.html
+++ b/src/app/customer/customer-upload/customer-upload.component.html
@@ -1,5 +1,5 @@
 <div class="body-container">
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
     <div class="main-container">
         <app-sidebar></app-sidebar>
         <div role="main" class="main-content">
@@ -13,14 +13,19 @@
                     <div class="container">
                         <div class="prof-form-bdy">
                             <div class="search-sec">
-                                <div class="row mt-5">
+                                <div class="row input-form">
                                     <div class="col-6 col-lg-6">
-                                        <label for="">Upload file here</label>
+                                        <!-- <label for="">Upload file here</label>
                                         <div class="custom-file mb-3">
                                             <input type="file" accept=".xlsx,.xlsm," (change)="fileUplaod($event)"
                                                 class="custom-file-input" id="customFile" name="filename" required>
                                             <label class="custom-file-label" for="customFile">{{uploadedFile?.name ?
                                                 uploadedFile?.name : 'Customer Upload'}}</label>
+                                        </div> -->
+                                        <div class="mb-3 mt-2">
+                                            <label for="custom-file-prod" class="form-label">{{uploadedFile?.name ?
+                                                uploadedFile?.name : 'Customer Upload'}}</label>
+                                            <input (change)="fileUplaod($event)" accept=".xls,.xml," class="form-control form-control-lg" id="custom-file-prod" name="filename" type="file" required>
                                         </div>
                                         
                                     </div>
