--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
    <body>
       <div class="body-container">
-         <app-header></app-header>
+         <!-- <app-header></app-header> -->
          <!-- /.navbar -->
          <div class="main-container">
             <app-sidebar></app-sidebar>
@@ -9,12 +9,12 @@
             <div role="main" class="main-content">
                <div class="page-content container container-plus">
                   <div class="row">
-                     <div class="col-sm-12">
-                        <h4 class="pull-left page-title">Welcome !</h4>
+                     <!-- <div class="col-sm-12 " aria-label="breadcrumb">
+                        <h4 class="pull-left page-title mb-2">Welcome !</h4>
                         <ol class="breadcrumb pull-right">
-                           <li> <a href="#">Tata Steel Mining Limited</a></li>
+                           <li class="breadcrumb-item active" aria-current="page"> <a href="#">Tata Steel Mining Limited</a></li>
                         </ol>
-                     </div>
+                     </div> -->
                   </div>
                   <div class="row">
                      <div class="col-md-6 col-sm-6 col-lg-3">
