--- a/src/app/manage-charges/freight-charges/freight-charges.component.html
+++ b/src/app/manage-charges/freight-charges/freight-charges.component.html
@@ -1,5 +1,5 @@
 <div class="body-container">
-  <app-header></app-header>
+  <!-- <app-header></app-header> -->
     <!-- /.navbar -->
     <div class="main-container">
        <app-sidebar></app-sidebar>
