--- a/src/app/product-management/fg-stock-assumption/fg-stock-assumption.component.html
+++ b/src/app/product-management/fg-stock-assumption/fg-stock-assumption.component.html
@@ -1,5 +1,5 @@
 <div class="body-container">
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
     <div class="main-container">
         <app-sidebar></app-sidebar>
         <div role="main" class="main-content">
