--- a/src/app/settings/set-threshold/set-threshold.component.html
+++ b/src/app/settings/set-threshold/set-threshold.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="body-container">
-      <app-header></app-header>
+      <!-- <app-header></app-header> -->
        <!-- /.navbar -->
        <div class="main-container">
          <app-sidebar></app-sidebar>
