password show and hide implemented

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,8 +32,22 @@
                </div>
                <div class="form-group">
                   <div class="col-xs-12">
-                     <input class="form-control input-lg mb-3" formControlName="password" type="password" required=""
-                        placeholder="Password">
+                     <!-- <input class="form-control input-lg mb-3" formControlName="password" type="password" required=""
+                        placeholder="Password"> -->
+                        <div class="input-group mx-auto">
+                           <input name="password" formControlName="password"
+                               [type]="showPassword ? 'text' : 'password'"
+                               class="form-control pwd-control"
+                               id="password-field" placeholder="Password">
+                           <div class="eye_show_hide">
+                             <i alt="show" class="fa fa-eye eye-show" 
+                             (click)="showPassword = !showPassword"
+                             [class.hide]="showPassword"></i>
+                             <i alt="hide" class="fa fa-eye-slash eye-hide" 
+                             (click)="showPassword = !showPassword"
+                             [class.hide]="!showPassword"></i>
+                           </div>
+                         </div>
                      <div *ngIf="f['password'].invalid && (f['password'].dirty || f['password'].touched || submitted)">
                         <small class="text-danger">
                            Password is required
@@ -41,7 +55,7 @@
                      </div>
                   </div>
                </div>
-               <div class="form-group">
+               <!-- <div class="form-group">
                   <div class="col-xs-12">
                      <div class="checkbox checkbox-primary">
                         <input id="checkbox-signup" type="checkbox">
@@ -50,7 +64,7 @@
                         </label>
                      </div>
                   </div>
-               </div>
+               </div> -->
                <div class="form-group text-center m-t-40">
                   <div class="col-xs-12">
                      <button class="btn btn-primary btn-lg w-lg waves-effect waves-light rm01 mb-3 btn-h-auto" type="submit">Log
