changes on threshold and freight charges

--- a/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
+++ b/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
@@ -108,7 +108,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-sm-12">
+                                    <div class="col-sm-12 p-3">
                                         <div class="">
                                             <button class="btn btn-primary btn-ser" (click)="saveFreight()" type="button">Save</button>
                                         </div>
