--- a/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
+++ b/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
@@ -10,8 +10,8 @@
                 <div class="row">
                    <div class="col-sm-12">
                       <h4 class="pull-left page-title">Update Threshold Limits</h4>
-                      <ol class="breadcrumb pull-right">
-                         <li> <a><i class="fa fa-angle-double-left"></i> Back</a></li>
+                      <ol class="breadcrumb pull-right pointer">
+                         <li routerLink="/settings/threshold-limit"> <a><i class="fa fa-angle-double-left"></i> Back</a></li>
                       </ol>
                    </div>
                 </div>
@@ -92,7 +92,7 @@
                                   </div>
                                </div>
                                <div class="col-sm-12">
-                                  <div class="">
+                                  <div class="mt-3">
                                      <button type="button" (click)="saveThreshold()" class="btn btn-primary btn-ser" >Submit</button>
                                   </div>
                                </div>
