--- a/src/app/settings/set-threshold-limits/set-threshold-limits.component.html
+++ b/src/app/settings/set-threshold-limits/set-threshold-limits.component.html
@@ -35,7 +35,7 @@
                                </div>
                             </div>
                             <div class="col-sm-4">
-                               <div class="rm05">
+                               <div class="mt-4">
                                   <button class="btn btn-primary btn-ser" type="submit">Search</button>
                                </div>
                             </div>
